done repairs on the tubes page

--- a/.hintrc
+++ b/.hintrc
@@ -10,7 +10,12 @@
           "-webkit-text-size-adjust"
         ]
       }
+    ],
+    "axe/text-alternatives": [
+      "default",
+      {
+        "image-alt": "off"
+      }
     ]
   }
 }
-
