added photos to chandelier page

--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,12 @@
       {
         "image-alt": "off"
       }
+    ],
+    "axe/language": [
+      "default",
+      {
+        "html-has-lang": "off"
+      }
     ]
   }
 }
